합병 정렬 정리

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<script src="./3.재귀/example.js"/>
+<script src="./8.합병정렬/index.js"/>
 <body>
   
 </body>
